Create and update new file jupyter

--- a/orientacoes (1).ipynb
+++ b/orientacoes (1).ipynb
@@ -428,6 +428,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "df9a023f-f09b-4a22-9872-4e32801a812b",
+   "metadata": {},
+   "source": [
+    "# PREPARAÇÃO DE DADOS"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "75e70077",
@@ -8471,6 +8479,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "f46ef9f9-ec09-4033-a31e-ebf22c54ea0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       True\n",
+       "1       True\n",
+       "2       True\n",
+       "3       True\n",
+       "4       True\n",
+       "        ... \n",
+       "9445    True\n",
+       "9446    True\n",
+       "9447    True\n",
+       "9448    True\n",
+       "9449    True\n",
+       "Length: 9450, dtype: bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().T.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "d9fb3b47-49e3-4661-8200-b8bf14b5a9fb",
    "metadata": {},
@@ -8522,38 +8562,6 @@
    ],
    "source": [
     "df.isnull().any()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "f46ef9f9-ec09-4033-a31e-ebf22c54ea0b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       True\n",
-       "1       True\n",
-       "2       True\n",
-       "3       True\n",
-       "4       True\n",
-       "        ... \n",
-       "9445    True\n",
-       "9446    True\n",
-       "9447    True\n",
-       "9448    True\n",
-       "9449    True\n",
-       "Length: 9450, dtype: bool"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().T.any()"
    ]
   },
   {
